fix grid layout problem

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -56,10 +56,9 @@ background-color: white;
   text-align: center;
 }
 .grid-item-state {
-  border: 1px solid;
+  border: 5px solid;
   padding: 20px;
   font-size: 30px;
   text-align: center;
-  grid-column: span 1 / 4;
-  grid-row: span 1;
+  grid-column: span 3;
 }
